<?xml version="1.0"?>
<package format="2">
  <name>nanosaur_description</name>
  <version>0.1.0</version>
  <description>The nanosaur package</description>

  <maintainer email="todo@maintainer">mantainer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
